Added bed temperature control
