# OctoprintOpenApi/generated/OpenAPIClient/Classes/OpenAPIs/Models/BedCommand.swift
@@ -1,5 +1,5 @@
 //
-// PrintToolCommand.swift
+// BedCommand.swift
 //
 // Generated by openapi-generator
 // https://openapi-generator.tech
@@ -8,7 +8,7 @@
 import Foundation
 
 
-public enum PrintToolCommand: String, Codable, CaseIterable {
+public enum BedCommand: String, Codable, CaseIterable {
     case target = "target"
     case offset = "offset"
 }
