# OctoprintOpenApi/generated/OpenAPIClient/Classes/OpenAPIs/Models/HistoryFrame.swift
@@ -1,0 +1,24 @@
+//
+// HistoryFrame.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+
+
+public struct HistoryFrame: Codable { 
+
+
+    public var time: Double?
+    public var tool0: Temperature?
+    public var bed: Temperature?
+
+    public init(time: Double? = nil, tool0: Temperature? = nil, bed: Temperature? = nil) {
+        self.time = time
+        self.tool0 = tool0
+        self.bed = bed
+    }
+
+}
