# SquidPrintLogic/SquidPrintLogic/Entities/TemperatureFrame.swift
@@ -1,28 +1,28 @@
 //
 //  TemperatureFrame.swift
-//  SquidPrint
+//  SquidPrintLogic
 //
-//  Created by Petras Malinauskas on 2020-11-26.
+//  Created by Petras Malinauskas on 2020-11-28.
 //
 
 import Foundation
 import OpenAPIClient
 
-struct TemperatureFrame {
-    var bed: Temperature
-    var hotend: Temperature
+public struct TemperatureFrame {
+    public var bed: Temperature
+    public var hotend: Temperature
     
-    init() {
+    public init() {
         bed = Temperature(actual: 0, target: 0, offset: 0)
         hotend = Temperature(actual: 0, target: 0, offset: 0)
     }
     
-    init(temperatureState: TemperatureState) {
+    public init(temperatureState: TemperatureState) {
         hotend = temperatureState.tool0 ?? Temperature()
         bed = temperatureState.bed ?? Temperature()
     }
     
-    init(bed: Temperature?, hotend: Temperature?, lastFrame: TemperatureFrame = TemperatureFrame()) {
+    public init(bed: Temperature?, hotend: Temperature?, lastFrame: TemperatureFrame = TemperatureFrame()) {
         self.bed = bed ?? lastFrame.bed
         self.hotend = hotend ?? lastFrame.hotend
     }
